fix error dark mode

--- a/src/Components/Main/Main.css
+++ b/src/Components/Main/Main.css
@@ -34,8 +34,8 @@ body::-webkit-scrollbar {
 .LayoutTextos h1 {
     font-family: 'Exo', sans-serif;
     font-size: 2rem;
-    padding-top: 4%;
-    padding-left: 5%;
+    margin-top: 4%;
+    margin-left: 5%;
 }
 
 .Layout span {
@@ -70,7 +70,7 @@ body::-webkit-scrollbar {
     padding: 15px;
     justify-content: center;
     flex-direction: column;
-    gap: 26px;
+    gap: 18px;
     right: 1%;
     top: 16%;
 }
@@ -117,7 +117,7 @@ body::-webkit-scrollbar {
 .container-botao {
     display: flex;
     flex-direction: column;
-    gap: 18px;
+    gap: 16px;
     margin-left: 3%;
     margin-top: 1%;
 }
@@ -172,18 +172,16 @@ body::-webkit-scrollbar {
 
     .LayoutTextos h1 {
         text-align: center;
-        padding: 5% 0% 0%;
     }
 
     .LayoutTextos span {
         text-align: center;
-        margin: 0%;
     }
 
     .LayoutTextos p {
         text-align: center;
         max-width: max-content;
-        margin: 0% 8% 0%;
+        margin: 0% 4% 0%;
     }
 
     .Layout.dark .LayoutTextos p {
@@ -191,6 +189,8 @@ body::-webkit-scrollbar {
     }
 
     .container-botao {
+        margin-top: 5%;
+        margin-bottom: 0;
         display: flex;
         align-items: center;
     }
@@ -219,7 +219,6 @@ body::-webkit-scrollbar {
     .container-techs img {
         margin-left: 0rem;
         padding: 6px;
-        padding-bottom: 15%;
         border-bottom: none;
         width: 35px;
         height: 35px;
